--- a/public/style.css
+++ b/public/style.css
@@ -14,17 +14,17 @@
   
   textarea {
     display: block;
-    height: 1500px;
-    font-size: 70px;
+    height: 200px;
+    font-size: 20px;
     width: 100%;
-    background-color: #ffffff;
-    border: 1px solid #cfcfcf;
+    background-color: #d0c9c9;
+    border: 1px solid #d5d1d1;
   }
   
   #note {
     text-transform: uppercase;
-    font-size: 70px;
-    color: #393535;
+    font-size: 15px;
+    color: #b8afaf;
     letter-spacing: 1px;
   }
 
